--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".MainActivity">
 
     <Button
@@ -14,6 +15,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="-"
+        app:backgroundTint="#009688"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/breset" />
 
@@ -27,6 +29,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="*"
+        app:backgroundTint="#009688"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bequal"
         app:layout_constraintTop_toBottomOf="@+id/bdiv" />
@@ -41,6 +44,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="/"
+        app:backgroundTint="#009688"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/b3"
         app:layout_constraintTop_toBottomOf="@+id/bplus" />
@@ -55,6 +59,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="+"
+        app:backgroundTint="#009688"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/b6"
         app:layout_constraintTop_toBottomOf="@+id/bm" />
@@ -67,6 +72,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="8"
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/b9"
         app:layout_constraintTop_toBottomOf="@+id/breset" />
 
@@ -80,6 +86,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="."
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/b9"
         app:layout_constraintStart_toEndOf="@+id/b0"
         app:layout_constraintTop_toBottomOf="@+id/b2" />
@@ -94,6 +101,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="2"
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/b9"
         app:layout_constraintStart_toEndOf="@+id/b1"
         app:layout_constraintTop_toBottomOf="@+id/b5" />
@@ -106,6 +114,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:text="5"
+        app:backgroundTint="#919191"
         app:layout_constraintStart_toEndOf="@+id/b4"
         app:layout_constraintTop_toBottomOf="@+id/b8" />
 
@@ -119,6 +128,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="1"
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/b8"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -132,6 +142,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="9"
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/bm"
         app:layout_constraintTop_toBottomOf="@+id/breset" />
 
@@ -145,6 +156,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="="
+        app:backgroundTint="#9E2E2E"
         app:layout_constraintEnd_toStartOf="@+id/bm"
         app:layout_constraintStart_toEndOf="@+id/bp"
         app:layout_constraintTop_toBottomOf="@+id/b3" />
@@ -159,6 +171,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="3"
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/bm"
         app:layout_constraintStart_toEndOf="@+id/b2"
         app:layout_constraintTop_toBottomOf="@+id/b6" />
@@ -173,9 +186,39 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="6"
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/bm"
         app:layout_constraintStart_toEndOf="@+id/b5"
         app:layout_constraintTop_toBottomOf="@+id/b9" />
+
+    <Button
+        android:id="@+id/bracket1"
+        android:layout_width="72dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="14dp"
+        android:text="("
+        app:backgroundTint="#009688"
+        app:layout_constraintBottom_toTopOf="@+id/b7"
+        app:layout_constraintEnd_toStartOf="@+id/bracket2"
+        app:layout_constraintTop_toBottomOf="@+id/R2" />
+
+    <Button
+        android:id="@+id/bracket2"
+        android:layout_width="72dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="14dp"
+        android:text=")"
+        app:backgroundTint="#009688"
+        app:layout_constraintBottom_toTopOf="@+id/b8"
+        app:layout_constraintStart_toEndOf="@+id/bracket1"
+        app:layout_constraintTop_toBottomOf="@+id/R2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/b7"
@@ -185,6 +228,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="7"
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/b8"
         app:layout_constraintTop_toBottomOf="@+id/breset" />
 
@@ -198,6 +242,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="0"
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/b8"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -213,6 +258,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="4"
+        app:backgroundTint="#919191"
         app:layout_constraintEnd_toStartOf="@+id/b8"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -227,6 +273,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="39dp"
         android:layout_marginRight="39dp"
+        android:background="#FFFFFF"
         android:text="0"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -238,28 +285,26 @@
         android:id="@+id/R1"
         android:layout_width="333dp"
         android:layout_height="45dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
         android:layout_marginTop="90dp"
         android:layout_marginEnd="39dp"
         android:layout_marginRight="39dp"
+        android:background="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/breset"
         android:layout_width="161dp"
         android:layout_height="52dp"
-        android:layout_marginStart="218dp"
-        android:layout_marginLeft="218dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="C"
+        app:backgroundTint="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bracket2"
         app:layout_constraintTop_toBottomOf="@+id/R2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
