--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,20 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/power"
+        android:layout_width="72dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="14dp"
+        android:text="x^"
+        app:backgroundTint="#009688"
+        app:layout_constraintBottom_toTopOf="@+id/b7"
+        app:layout_constraintEnd_toStartOf="@+id/bracket1"
+        app:layout_constraintTop_toBottomOf="@+id/R2" />
+
+    <Button
         android:id="@+id/bm"
         android:layout_width="72dp"
         android:layout_height="41dp"
@@ -202,8 +216,9 @@
         android:text="("
         app:backgroundTint="#009688"
         app:layout_constraintBottom_toTopOf="@+id/b7"
-        app:layout_constraintEnd_toStartOf="@+id/bracket2"
-        app:layout_constraintTop_toBottomOf="@+id/R2" />
+        app:layout_constraintEnd_toStartOf="@+id/b9"
+        app:layout_constraintTop_toBottomOf="@+id/R2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/bracket2"
@@ -295,8 +310,8 @@
 
     <Button
         android:id="@+id/breset"
-        android:layout_width="161dp"
-        android:layout_height="52dp"
+        android:layout_width="72dp"
+        android:layout_height="41dp"
         android:layout_marginStart="23dp"
         android:layout_marginLeft="23dp"
         android:layout_marginTop="24dp"
